gitops/apps/demo-nginx/overlays/stage/service-port-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-nginx
spec:
  ports:
  - name: http
    port: 80
    targetPort: 8080
